<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_onboarding_blob_scene_haikei__1_"
    android:padding="20dp">

    <ImageView
        android:id="@+id/onboarding_image_1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/im_onboarding_smart_home_bro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_get_started_title"
        style="@style/TextAppearance.DomotiqueApp.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_end_page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image_1" />

    <TextView
        android:id="@+id/onboarding_get_started_subtitle"
        style="@style/TextAppearance.DomotiqueApp.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/onboarding_end_page_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_get_started_title" />

    <Button
        android:id="@+id/onboarding_login_button"
        style="@style/TextAppearance.DomotiqueApp.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_heigh"
        android:layout_marginTop="30dp"
        android:text="@string/onboarding_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_get_started_subtitle" />

    <Button
        android:id="@+id/onboarding_register_button"
        style="@style/ButtonAppearance.DomotiqueApp.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_heigh"
        android:layout_marginTop="10dp"
        android:text="@string/onboarding_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>